--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,1 +1,15 @@
-requirements.txt
+blinker==1.6.2
+click==8.1.7
+Flask==2.3.3
+Flask-Cors==4.0.0
+greenlet==2.0.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+packaging==23.1
+Pillow==10.0.0
+psycopg2==2.9.7
+pytesseract==0.3.10
+SQLAlchemy==2.0.20
+typing_extensions==4.7.1
+Werkzeug==2.3.7
